# nematodes

./: README
code/angles/: cline_angles.m  theta.m
code/calcium/: bleach_correction.m  ca_wrapper.m  calcium_process.m  find_goodframe.m  gui_cal.m  neuron_angle  neuron_angle.m  thresh_estimate.m
code/centerline/: dijk.m  process.m  truncate_centerline.m
code/gui/: worms.fig  worms.m
code/itk_register/: NOTES.txt  README.txt  c090122w00.in  c09012310.in  sample.in
code/itk_register/src/: CMakeLists.txt  CommandIterationUpdate.h  DeformableWormRegister.cxx  DeformableWormRegister.h  FilterOperations.cxx  FilterOperations.h  InputHandler.cxx  InputHandler.h  RegistrationEngine.cxx  RegistrationEngine.h  RemoteBridge.cxx  RigidWormRegister.cxx  RigidWormRegister.h  wormRegister.cxx  wormRegister_deformable.cxx  wormRegister_rigid.cxx
code/multineuron/: track_one.m
code/segmentation/: kmeans.m  sal.m  sfcm.m
code/skeleton/: skel2adj.m
code/sorting/: sorting_method.m
code/splitter/: reconstruct_transform.m  splitter.m  splitter2.m
code/testers/: behavior.m  feb2011_test.m  nm1.m  nm2.m  nm3.m  testrunner.m
code/tracking/: plotter.m  pruner.c  tracker.m
code/util/: gaussian2d.m  load_directory.m
paper_code/: script.m
